--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>API</title>
-</head>
-<body>
-    <div class="pokemons">
-
-    </div>
-</body>
-    <script src="index.js"></script>
+  </head>
+  <body>
+    <h1>Pokemon</h1>
+    <div class="pokemons"></div>
+    <h1>Dogs</h1>
+    <div class="dogs"></div>
+  </body>
+  <script src="index.js"></script>
 </html>
