--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <div class="pokemons"></div>
     <h1>Dogs</h1>
     <div class="dogs"></div>
+    <h1>Books with less than 500 pages</h1>
+    <div class="books"></div>
+    <h1>Visitors to the work event</h1>
+    <div class="persons"></div>
+    <h1>Visitors that is attending to work event and has allergies</h1>
+    <div class="allergies"></div>
   </body>
   <script src="index.js"></script>
 </html>
